# aiglos

./: .replit  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLAW_CODE_PR.md  CONTRIBUTING.md  DEPLOY.md  LICENSE  MANIFEST.md  PUSH.md  README.md  README_aiglos.md  SECURITY.md  aiglos.html  aiglos.py  aiglos_complete_reference_v0253.md  aiglos_gates.py  aiglos_mcp_server.py  index.html  mcporter.json  netlify.toml  package-lock.json  package.json  pyproject.toml  replit.md  requirements-mcp.txt  tailwind.config.ts
.github/workflows/: aiglos-scan.yml
aiglos/: README.md  __init__.py  __main__.py  cli.py  forensics.py
aiglos-rs/: Cargo.toml
aiglos-rs/src/: guard.rs  lib.rs  rules.rs  verdict.rs
aiglos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aiglos/adaptive/: __init__.py  amend.py  campaign.py  inspect.py  memory.py  observation.py  permission_recommender.py  policy.py  skill_reputation.py  source_reputation.py
aiglos/audit/: __init__.py  report.py  scanner.py
aiglos/autoresearch/: SCHEMA.md  __init__.py  atlas_coverage.py  citation_verifier.py  compliance_report.py  coupling.py  feeds.py  ghsa_coverage.json  ghsa_coverage.py  ghsa_watcher.py  threat_literature.py  verified_rule_engine.py  wiki.py
aiglos/benchmark/: govbench.py
aiglos/cli/: __init__.py  forensics_cli.py  launch.py  scan_deps.py  validate_prompt.py
aiglos/core/: __init__.py  behavioral_baseline.py  causal_tracer.py  config.py  federation.py  intent_predictor.py  metering.py  policy_proposal.py  rag_guard.py  threat_engine_v2.py  threat_forecast.py
aiglos/desktop/: App.jsx  aiglos_sidecar.py  install.sh  main.rs
aiglos/integrations/: __init__.py  agent_phase.py  context_guard.py  gigabrain.py  hermes.py  honeypot.py  nemoclaw.py  (+17 more)
aiglos_embed/: __init__.py  config.py  interceptor.py  metering.py  scanner.py
attached_assets/: Aiglos_Complete_Reference_v0.25.11_1774974396680.docx  Aiglos__Complete_Reference_(1)_1774970249908.docx  Cargo_1775056625789.toml  Pasted--1514-1514-Copy-outputs-1514-1514-v0-24-0-complete-What_1773852240989.txt  Pasted--Add-Aiglos-runtime-security-integration-Summary-This-P_1775056608098.txt  Pasted--Aiglos-Autonomous-AI-Agent-Security-Runtime-T1-through_1772832620348.txt  Pasted--Aiglos-CLI-Deployment-Guide-Self-contained-binary-for-_1774810405274.txt  Pasted--Aiglos-Complete-Feature-and-Product-Reference-Version-_1775061296153.txt  Pasted--Aiglos-Comprehensive-Feature-List-AI-Agent-Runtime-Sec_1774185405407.txt  Pasted--Aiglos-Comprehensive-Feature-List-AI-Agent-Runtime-Sec_1774186317359.txt  Pasted--Aiglos-The-Only-Full-Stack-Autonomous-AI-Agent-Securit_1772825162396.txt  Pasted--Aiglos-v0-25-23-Session-Build-Overview-April-8-2026-Pl_1775659353124.txt  Pasted--Aiglos-v0-25-25-April-8-2026-What-was-built-today-101-_1775672194311.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1772908759978.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1772918315654.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1773930650996.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1774029671458.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1774191230320.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1774192012058.txt  Pasted--DOCTYPE-html-html-lang-en-style-background-0B0B0D-colo_1773404065501.txt  Pasted--SOUL-md-my-agent-Identity-You-are-my-agent-Research-AI_1774191944789.txt  Pasted--T40-SHARED-CONTEXT-POISON-context-guard-py-The-fleet-c_1773753420954.txt  Pasted--USPTO-first-This-incident-just-became-the-most-powerfu_1775139647284.txt  Pasted--div-align-center--1773404078434_1773404078435.txt  Pasted--div-align-center--1773930670211_1773930670211.txt  Pasted--div-align-center--1774029482520_1774029482520.txt  Pasted--div-align-center--1774551888592_1774551888592.txt  Pasted--div-align-center--1775053779205_1775053779206.txt  Pasted--div-align-center--1775053818334_1775053818334.txt  Pasted--div-align-center--1775058317446_1775058317446.txt  Pasted--div-align-center-br--1773059383691_1773059383691.txt  Pasted--v0-25-17-the-claw-code-100x-build-29-29-checks-Here-is_1775056473308.txt  Pasted--v0-25-23-98-rules-29-campaigns-All-tests-pass-T96-AI-E_1775659127794.txt  Pasted-104k-stars-and-climbing-while-we-re-talking-The-window-_1775056399816.txt  Pasted-106-106-Copy-to-outputs-106-106-passing-Stack-is-now-76_1772903799772.txt  Pasted-1143-1143-Python-tests-Federation-server-8-routes-verif_1773759225911.txt  Pasted-1143-1143-v0-17-0-complete-Build-1-aiglos-skills-SKILL-_1773759163304.txt  Pasted-1208-1208-All-documentation-and-distribution-infrastruc_1773762035756.txt  Pasted-1300-1300-v0-19-0-complete-T44-T66-the-full-taxonomy-Th_1773763705471.txt  Pasted-87-87-Copy-to-outputs-87-87-passing-Stack-is-now-663-te_1772903753208.txt  (+187 more)
autoresearch/: README.md  __init__.py
docs/: DEPLOY.md  llm-instructions.txt  ndaa-1513.md  threat-map-atlas.md
launch_assets/: dm_callum_mcmahon.md  dm_donchitos.md  launch_litellm_amendment.md
scripts/: build_cli.sh
server/: auth.ts  engine.ts  index.ts  middleware.ts  routes.ts  seed.ts  storage.ts
shared/: schema.ts
tests/: conftest.py  test_adaptive.py  test_atlas_and_t75.py  test_audit_and_sandbox.py  test_autoresearch.py  test_behavioral_baseline.py  test_byterover.py  test_causal_tracer.py  test_citation_verifier.py  test_core.py  test_e2e.py  test_external_channel.py  test_federation.py  test_ghsa_and_t70.py  test_gigabrain_and_t79.py  test_honeypot_override.py  test_injection_scanner.py  test_intent_predictor.py  test_launch_and_scaffold.py  test_missed_features.py  test_new_surfaces.py  test_openShell.py  test_openclaw_mcp.py  test_policy_proposal.py  test_rl_guard.py  test_source_reputation.py  test_studio_pipeline.py  test_subagent_and_t77.py  test_t80_t81_scandeps.py  test_t82_dgm.py  test_threat_engine_v2.py  test_v030.py  test_validate_prompt.py
website/: changelog.html  defense.html  demo.html  index.html  playground.html  pricing.html  scan.html  threats.html  tutorial-launch.html
(+105 files in other folders)
