[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiglos"
version = "0.1.0"
description = "AI Agent Security Runtime — block T1-T36 threats, sign sessions, ship with proof"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Aiglos", email = "will@aiglos.dev"}
]
keywords = [
    "ai", "security", "agents", "mcp", "llm", "defense",
    "openclaw", "hermes", "ndaa", "cmmc", "agentic", "runtime",
    "prompt-injection", "tool-calling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"

# Core detection engine has ZERO required deps (stdlib only).
# Optional deps unlock attestation signing and reporting.
dependencies = []

[project.optional-dependencies]
signing = [
    "cryptography>=41.0.7",
]
full = [
    "cryptography>=41.0.7",
    "rich>=13.7.0",
    "click>=8.1.7",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
]

[project.urls]
Homepage       = "https://aiglos.dev"
Documentation  = "https://docs.aiglos.dev"
Repository     = "https://github.com/aiglos/aiglos"
"Bug Tracker"  = "https://github.com/aiglos/aiglos/issues"
Changelog      = "https://github.com/aiglos/aiglos/blob/main/CHANGELOG.md"

[project.scripts]
aiglos = "aiglos.__main__:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["aiglos*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.md", "py.typed"]

[tool.ruff]
line-length    = 100
target-version = "py311"
select         = ["E", "F", "I"]
ignore         = ["E501"]

[tool.mypy]
python_version       = "3.11"
ignore_missing_imports = true
strict               = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "-v --tb=short"

[tool.bandit]
exclude_dirs = ["tests"]
skips        = ["B101", "B324"]
