[package]
name = "aiglos"
version = "0.1.0"
edition = "2021"
description = "Runtime security for AI agents -- Rust implementation"
license = "Apache-2.0"
repository = "https://github.com/w1123581321345589/aiglos-rs"
keywords = ["ai", "agent", "security", "runtime", "mcp"]
categories = ["security", "development-tools"]

[lib]
name = "aiglos"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = []
async = ["tokio"]
serde = ["dep:serde", "dep:serde_json"]
forensics = ["dep:rusqlite"]

[dependencies]
serde       = { version = "1", features = ["derive"], optional = true }
serde_json  = { version = "1", optional = true }
rusqlite    = { version = "0.31", optional = true }
tokio       = { version = "1", features = ["full"], optional = true }
sha2        = { version = "0.10" }
hmac        = { version = "0.12" }
hex         = { version = "0.4" }
uuid        = { version = "1", features = ["v4"] }
regex       = { version = "1" }
chrono      = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
